--- a/package.json
+++ b/package.json
@@ -19,17 +19,30 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@capacitor/android": "^2.4.5",
     "@capacitor/core": "2.4.5",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/onesignal": "^5.30.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/web-socket-server": "^5.30.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/storage": "^2.3.1",
+    "@types/socket.io": "^2.1.12",
+    "cordova-plugin-websocket-server": "^1.6.0",
+    "cordova-sqlite-storage": "^5.1.0",
+    "jquery": "^3.5.1",
+    "net": "^1.0.2",
+    "node-sass": "^4.14.1",
+    "onesignal-cordova-plugin": "^2.11.2",
     "rxjs": "~6.5.5",
+    "sockjs-client": "^1.5.0",
+    "stompjs": "^2.3.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular-devkit/build-angular": "^0.1000.8",
     "@angular/cli": "~10.0.5",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
